--- a/index.html
+++ b/index.html
@@ -170,6 +170,295 @@
 						<div class="box-hd">
 							<h2 class="title">小米闪购</h2>
 						</div>
+						<div class="flash-btn">
+							<span>&lt;</span>
+							<span>&gt;</span>
+						</div>
+						<div class="flashsale-demo">
+							<div class="flashsale-js">
+								<p>10:00&nbsp;场</p>
+								<div class="flash-icon">
+									<img src="img/flashsale.png"/>
+								</div>
+								<p style="color: rgba(0,0,0,.54);font-size: 15px;">距离结束还有</p>
+								<div class="flash-time">
+									<span>00</span>
+									<i>:</i>
+									<span>11</span>
+									<i>:</i>
+									<span>02</span>
+								</div>
+							</div>
+							<div class="flash-goods">
+								<ul>
+									<li>
+										<div class="flash-content">
+											<img src="img/flash/pms_1532604005.80875371.jpg">
+											<h3 class="flash-title">小米路由器4C 白色</h3>
+											<p class="desc">300M单频，高增益4天线</p>
+											<p class="price">
+												<span>59元</span>
+												<del>99元</del>	
+											</p>
+										</div>
+									</li>
+									<li>
+										<div class="flash-content">
+											<img src="img/flash/pms_1545878140.49791294.jpg">
+											<h3 class="flash-title">米兔儿童书包2 小号 深蓝色</h3>
+											<p class="desc">校园生活好伴侣</p>
+											<p class="price">
+												<span>169元</span>
+												<del>199元</del>	
+											</p>
+										</div>
+									</li>
+									<li>
+										<div class="flash-content">
+											<img src="img/flash/pms_1513822496.31335198.jpg">
+											<h3 class="flash-title">小米路由器4C 白色</h3>
+											<p class="desc">300M单频，高增益4天线</p>
+											<p class="price">
+												<span>59元</span>
+												<del>99元</del>	
+											</p>
+										</div>
+									</li>
+									<li>
+										<div class="flash-content">
+											<img src="img/flash/pms_1545975724.92496169.jpg">
+											<h3 class="flash-title">小米路由器4C 白色</h3>
+											<p class="desc">300M单频，高增益4天线</p>
+											<p class="price">
+												<span>59元</span>
+												<del>99元</del>	
+											</p>
+										</div>
+									</li>
+									<li>
+										<div class="flash-content">
+											<img src="img/flash/pms_1512725431.07341927.jpg">
+											<h3 class="flash-title">小米路由器4C 白色</h3>
+											<p class="desc">300M单频，高增益4天线</p>
+											<p class="price">
+												<span>59元</span>
+												<del>99元</del>	
+											</p>
+										</div>
+									</li>
+									<li>
+										<div class="flash-content">
+											<img src="img/flash/pms_1551343984.14546114.jpg">
+											<h3 class="flash-title">小米路由器4C 白色</h3>
+											<p class="desc">300M单频，高增益4天线</p>
+											<p class="price">
+												<span>59元</span>
+												<del>99元</del>	
+											</p>
+										</div>
+									</li>
+									<li>
+										<div class="flash-content">
+											<img src="img/flash/pms_1552868299.27348967.jpg">
+											<h3 class="flash-title">小米路由器4C 白色</h3>
+											<p class="desc">300M单频，高增益4天线</p>
+											<p class="price">
+												<span>59元</span>
+												<del>99元</del>	
+											</p>
+										</div>
+									</li>
+									<li>
+										<div class="flash-content">
+											<img src="img/flash/pms_1556521908.27222306.jpg">
+											<h3 class="flash-title">小米路由器4C 白色</h3>
+											<p class="desc">300M单频，高增益4天线</p>
+											<p class="price">
+												<span>59元</span>
+												<del>99元</del>	
+											</p>
+										</div>
+									</li>
+									<li>
+										<div class="flash-content">
+											<img src="img/flash/pms_1560222533.85047588.jpg">
+											<h3 class="flash-title">小米路由器4C 白色</h3>
+											<p class="desc">300M单频，高增益4天线</p>
+											<p class="price">
+												<span>59元</span>
+												<del>99元</del>	
+											</p>
+										</div>
+									</li>
+									<li>
+										<div class="flash-content">
+											<img src="img/flash/pms_1560230039.28979252.jpg">
+											<h3 class="flash-title">小米路由器4C 白色</h3>
+											<p class="desc">300M单频，高增益4天线</p>
+											<p class="price">
+												<span>59元</span>
+												<del>99元</del>	
+											</p>
+										</div>
+									</li>
+									<li>
+										<div class="flash-content">
+											<img src="img/flash/pms_1563188402.30011093.jpg">
+											<h3 class="flash-title">小米路由器4C 白色</h3>
+											<p class="desc">300M单频，高增益4天线</p>
+											<p class="price">
+												<span>59元</span>
+												<del>99元</del>	
+											</p>
+										</div>
+									</li>
+									<li>
+										<div class="flash-content">
+											<img src="img/flash/pms_1563787495.68116844.jpg">
+											<h3 class="flash-title">小米路由器4C 白色</h3>
+											<p class="desc">300M单频，高增益4天线</p>
+											<p class="price">
+												<span>59元</span>
+												<del>99元</del>	
+											</p>
+										</div>
+									</li>
+									<li>
+										<div class="flash-content">
+											<img src="img/flash/pms_1565058524.25058398.jpg">
+											<h3 class="flash-title">小米路由器4C 白色</h3>
+											<p class="desc">300M单频，高增益4天线</p>
+											<p class="price">
+												<span>59元</span>
+												<del>99元</del>	
+											</p>
+										</div>
+									</li>
+									<li>
+										<div class="flash-content">
+											<img src="img/flash/pms_1565614113.69785042.jpg">
+											<h3 class="flash-title">小米路由器4C 白色</h3>
+											<p class="desc">300M单频，高增益4天线</p>
+											<p class="price">
+												<span>59元</span>
+												<del>99元</del>	
+											</p>
+										</div>
+									</li>
+									<li>
+										<div class="flash-content">
+											<img src="img/flash/pms_1567393585.49577260.jpg">
+											<h3 class="flash-title">小米路由器4C 白色</h3>
+											<p class="desc">300M单频，高增益4天线</p>
+											<p class="price">
+												<span>59元</span>
+												<del>99元</del>	
+											</p>
+										</div>
+									</li>
+									<li>
+										<div class="flash-content">
+											<img src="img/flash/pms_1567408597.79367943.jpg">
+											<h3 class="flash-title">小米路由器4C 白色</h3>
+											<p class="desc">300M单频，高增益4天线</p>
+											<p class="price">
+												<span>59元</span>
+												<del>99元</del>	
+											</p>
+										</div>
+									</li>
+									<li>
+										<div class="flash-content">
+											<img src="img/flash/pms_1568188329.63947004.jpg">
+											<h3 class="flash-title">小米路由器4C 白色</h3>
+											<p class="desc">300M单频，高增益4天线</p>
+											<p class="price">
+												<span>59元</span>
+												<del>99元</del>	
+											</p>
+										</div>
+									</li>
+									<li>
+										<div class="flash-content">
+											<img src="img/flash/pms_1568617574.69725219.jpg">
+											<h3 class="flash-title">小米路由器4C 白色</h3>
+											<p class="desc">300M单频，高增益4天线</p>
+											<p class="price">
+												<span>59元</span>
+												<del>99元</del>	
+											</p>
+										</div>
+									</li>
+									<li>
+										<div class="flash-content">
+											<img src="img/flash/pms_1569564998.1585253.jpg">
+											<h3 class="flash-title">小米路由器4C 白色</h3>
+											<p class="desc">300M单频，高增益4天线</p>
+											<p class="price">
+												<span>59元</span>
+												<del>99元</del>	
+											</p>
+										</div>
+									</li>
+									<li>
+										<div class="flash-content">
+											<img src="img/flash/pms_1570623930.25886181.jpg">
+											<h3 class="flash-title">小米路由器4C 白色</h3>
+											<p class="desc">300M单频，高增益4天线</p>
+											<p class="price">
+												<span>59元</span>
+												<del>99元</del>	
+											</p>
+										</div>
+									</li>
+									<li>
+										<div class="flash-content">
+											<img src="img/flash/pms_1570670535.6211177.jpg">
+											<h3 class="flash-title">小米路由器4C 白色</h3>
+											<p class="desc">300M单频，高增益4天线</p>
+											<p class="price">
+												<span>59元</span>
+												<del>99元</del>	
+											</p>
+										</div>
+									</li>
+									<li>
+										<div class="flash-content">
+											<img src="img/flash/pms_1571038766.41824452.jpg">
+											<h3 class="flash-title">小米路由器4C 白色</h3>
+											<p class="desc">300M单频，高增益4天线</p>
+											<p class="price">
+												<span>59元</span>
+												<del>99元</del>	
+											</p>
+										</div>
+									</li>
+									<li>
+										<div class="flash-content">
+											<img src="img/flash/pms_1571384720.99968563.jpg">
+											<h3 class="flash-title">小米路由器4C 白色</h3>
+											<p class="desc">300M单频，高增益4天线</p>
+											<p class="price">
+												<span>59元</span>
+												<del>99元</del>	
+											</p>
+										</div>
+									</li>
+									<li>
+										<div class="flash-content">
+											<img src="img/flash/pms_1571576399.73615710.jpg">
+											<h3 class="flash-title">小米路由器4C 白色</h3>
+											<p class="desc">300M单频，高增益4天线</p>
+											<p class="price">
+												<span>59元</span>
+												<del>99元</del>	
+											</p>
+										</div>
+									</li>
+								</ul>
+							</div>
+							
+						</div>
 					</div>
 					<!-- 广告 -->
 					<div class="home-banner-box">
@@ -234,6 +523,9 @@
 						</div>
 					</div>
 				</div>
+			</div>
+			<div class="footer">
+				
 			</div>
 		</div>
 	</body>
