解决 margin为负对布局产生的影响

--- a/index.html
+++ b/index.html
@@ -216,22 +216,22 @@
 									<li>
 										<div class="flash-content">
 											<img src="img/flash/pms_1513822496.31335198.jpg">
-											<h3 class="flash-title">小米路由器4C 白色</h3>
-											<p class="desc">300M单频，高增益4天线</p>
+											<h3 class="flash-title">米家电磁炉</h3>
+											<p class="desc">双频火力，精准控温</p>
 											<p class="price">
-												<span>59元</span>
-												<del>99元</del>	
+												<span>299元</span>
+												<del>199元</del>	
 											</p>
 										</div>
 									</li>
 									<li>
 										<div class="flash-content">
 											<img src="img/flash/pms_1545975724.92496169.jpg">
-											<h3 class="flash-title">小米路由器4C 白色</h3>
-											<p class="desc">300M单频，高增益4天线</p>
+											<h3 class="flash-title">米家互联网洗烘一体机10Kg 白色</h3>
+											<p class="desc">22 种洗烘模式</p>
 											<p class="price">
-												<span>59元</span>
-												<del>99元</del>	
+												<span>1999元</span>
+												<del>2299元</del>	
 											</p>
 										</div>
 									</li>
@@ -468,6 +468,99 @@
 					<div class="home-brick-box phone">
 						<div class="box-hd">
 							<h2 class="title">手机</h2>
+						</div>
+						<div class="phone-span1">
+							<img src="img/phone/574c6643ab91c6618bfb2d0e2c761d0b.jpg" />
+						</div>
+						<div class="phone-span2">
+							<ul>
+								<li>
+									<div class="phone-content">
+										<img src="img/phone/2c16238f786e4f93bdb175d7bf21aa47.jpg"/>
+										<h3 class="phone-title">Redmi K30</h3>
+										<p class="desc">120Hz流速屏 全速热爱</p>
+										<p class="price">
+											<span>1559元起</span>
+										</p>
+									</div>
+								</li>
+								<li>
+									<div class="phone-content">
+										<img src="img/phone/53641901fbc28cbcdb495b17fdf69e46.jpg"/>
+										<h3 class="phone-title">Redmi K30 5G</h3>
+										<p class="desc">双模5G, 120Hz流速屏</p>
+										<p class="price">
+											<span>1999元起</span>
+										</p>
+									</div>
+								</li>
+								<li>
+									<div class="phone-content">
+										<img src="img/phone/07270cc09689eb9b13b29aa9f6bc41eb.jpg"/>
+										<h3 class="phone-title">小米CC9 Pro</h3>
+										<p class="desc">1亿像素 五摄四闪</p>
+										<p class="price">
+											<span>2599元起</span>
+											<del>2799元</del>
+										</p>
+									</div>
+								</li>
+								<li>
+									<div class="phone-content">
+										<img src="img/phone/d295c4fb500d163a7045dc715b47f808.jpg"/>
+										<h3 class="phone-title">Redmi 8</h3>
+										<p class="desc">5000mAh超长续航</p>
+										<p class="price">
+											<span>699元起</span>
+											<del>799元</del>
+										</p>
+									</div>
+								</li>
+								<li>
+									<div class="phone-content">
+										<img src="img/phone/c924c3f3436b6934495fd98f159ee3f7.jpg"/>
+										<h3 class="phone-title">Redmi 8A</h3>
+										<p class="desc">5000mAh超长续航</p>
+										<p class="price">
+											<span>559元起</span>
+											<del>699元</del>
+										</p>
+									</div>
+								</li>
+								<li>
+									<div class="phone-content">
+										<img src="img/phone/6f2493e6c6fe8e2485c407e5d75e3651.jpg"/>
+										<h3 class="phone-title">Redmi Note 8 Pro</h3>
+										<p class="desc">6400万全场景四摄</p>
+										<p class="price">
+											<span>1199元起</span>
+											<del>1399元</del>
+										</p>
+									</div>
+								</li>
+								<li>
+									<div class="phone-content">
+										<img src="img/phone/4c87947d104ee5833913e4c520108f16.jpg"/>
+										<h3 class="phone-title">Redmi Note 8</h3>
+										<p class="desc">千元4800万四摄</p>
+										<p class="price">
+											<span>969元起</span>
+											<del>999元</del>
+										</p>
+									</div>
+								</li>
+								<li>
+									<div class="phone-content">
+										<img src="img/phone/3c1af9783bdc53ed843af5655ca92009.jpg"/>
+										<h3 class="phone-title">Redmi 7A</h3>
+										<p class="desc">小巧大电量 持久流畅</p>
+										<p class="price">
+											<span>539元起</span>
+											<del>599元</del>
+										</p>
+									</div>
+								</li>
+							</ul>
 						</div>
 					</div>
 					<!-- 广告 -->
